# Satellite_image_semantic_segmentation

./: .gitignore  README.md  config.yaml  environment.yml  pyproject.toml
data/train/: dataset_stats.json
data/train/images/0000000001_V1/: 0000000001_V1_META.xml  0000000001_V1_POLY.sbn  0000000001_V1_POLY.sbx  0000000001_V1_POLY.shp  0000000001_V1_POLY.shp.xml  0000000001_V1_POLY.shx
data/train/images/0000000002_V1/: 0000000002_V1_META.xml  0000000002_V1_POLY.sbn  0000000002_V1_POLY.sbx  0000000002_V1_POLY.shp  0000000002_V1_POLY.shp.xml  0000000002_V1_POLY.shx
data/train/images/0000000003_V1/: 0000000003_V1_META.xml  0000000003_V1_POLY.sbn  0000000003_V1_POLY.sbx  0000000003_V1_POLY.shp  0000000003_V1_POLY.shp.xml  0000000003_V1_POLY.shx
data/train/images/0000000004_V1/: 0000000004_V1_META.xml  0000000004_V1_POLY.sbn  0000000004_V1_POLY.sbx  0000000004_V1_POLY.shp  0000000004_V1_POLY.shp.xml  0000000004_V1_POLY.shx
data/train/images/0000000005_V1/: 0000000005_V1_META.xml  0000000005_V1_POLY.sbn  0000000005_V1_POLY.sbx  0000000005_V1_POLY.shp  0000000005_V1_POLY.shp.xml  0000000005_V1_POLY.shx
data/train/images/0000000006_V1/: 0000000006_V1_META.xml  0000000006_V1_POLY.sbn  0000000006_V1_POLY.sbx  0000000006_V1_POLY.shp  0000000006_V1_POLY.shp.xml  0000000006_V1_POLY.shx
data/train/images/0000000007_V1/: 0000000007_V1_META.xml  0000000007_V1_POLY.dbf  0000000007_V1_POLY.sbn  0000000007_V1_POLY.sbx  0000000007_V1_POLY.shp  0000000007_V1_POLY.shp.xml  0000000007_V1_POLY.shx
data/train/images/0000000008_V1/: 0000000008_V1_META.xml  0000000008_V1_POLY.sbn  0000000008_V1_POLY.sbx  0000000008_V1_POLY.shp  0000000008_V1_POLY.shp.xml  0000000008_V1_POLY.shx
data/train/images/0000000009_V1/: 0000000009_V1_META.xml  0000000009_V1_POLY.sbn  0000000009_V1_POLY.sbx  0000000009_V1_POLY.shp  0000000009_V1_POLY.shp.xml  0000000009_V1_POLY.shx
data/train/images/0000000010_V1/: 0000000010_V1_META.xml  0000000010_V1_POLY.sbn  0000000010_V1_POLY.sbx  0000000010_V1_POLY.shp  0000000010_V1_POLY.shp.xml  0000000010_V1_POLY.shx
data/train/images/0000000011_V1/: 0000000011_V1_META.xml  0000000011_V1_POLY.sbn  0000000011_V1_POLY.sbx  0000000011_V1_POLY.shp  0000000011_V1_POLY.shp.xml  0000000011_V1_POLY.shx
data/train/images/0000000012_V1/: 0000000012_V1_META.xml  0000000012_V1_POLY.sbn  0000000012_V1_POLY.sbx  0000000012_V1_POLY.shp  0000000012_V1_POLY.shp.xml  0000000012_V1_POLY.shx
data/train/images/0000000013_V1/: 0000000013_V1_META.xml  0000000013_V1_POLY.sbn  0000000013_V1_POLY.sbx  0000000013_V1_POLY.shp  0000000013_V1_POLY.shp.xml  0000000013_V1_POLY.shx
data/val/data_rgb/: 0000000045.tif  0000000046.tif  0000000047.tif  0000000048.tif  0000000049.tif  0000000051.tif
outputs/prediction_results/: L19-11_prob_overlap1_0.25.tif.aux.xml  L19-11_prob_overlap_0.25.tif.aux.xml  L19-11_probability_map.tif.aux.xml  L19-11_seamless_probability_map.tif.aux.xml
src/: config.py  predict-版本1.py  predict.py  train.py
src/networks/: U_Net.py  model.py
src/utils/: chacke_pth.py  data_loader.py  logger.py  offline_augment.py  process_images.py  pth_to_onnx.py
(+228 files in other folders)
