# -------------------------------------------------------------------
# Python项目定义文件：负责管理所有Python包的依赖
# -------------------------------------------------------------------

[project]
name = "satellite-semantic-segmentation"
version = "0.1.0"
description = "A project for semantic segmentation of satellite imagery using PyTorch."
readme = "README.md"
requires-python = ">=3.9"

# --- 核心/运行时依赖 (dependencies) ---
dependencies = [
    "numpy",
    "matplotlib",
    "scikit-learn",
    "scikit-image",
    "opencv-python",
    "tqdm"
]

# --- 开发时依赖 (dev-dependencies) ---
dev = [
    "notebook",
    "pytest",
    "black",
    "flake8",
    "isort",
    "pip-tools",     # 用于从本项目生成 requirements.txt
]